--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,13 @@
 services:
   - type: web
-    name: instagram-session-service
+    name: instagram-session-extractor
     env: python
     buildCommand: |
-      apt-get update
-      apt-get install -y chromium-browser
+      apt-get update && \
+      apt-get install -y wget unzip chromium chromium-driver && \
       pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn application:app --host 0.0.0.0 --port 10000
     envVars:
-      - key: INSTAGRAM_USERNAME
-        value: dummarodum280
-      - key: INSTAGRAM_PASSWORD
-        value: Aman@123
+      - key: PYTHON_VERSION
+        value: 3.11
+    plan: free
